--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,20 @@
 {
+  "buildCommand": "echo 'No build needed'",
+  "outputDirectory": ".",
   "rewrites": [
-    {
-      "source": "/",
-      "destination": "/index.html"
-    },
     {
       "source": "/tour-image-manager",
       "destination": "/tour-image-manager.html"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/tour-image-manager",
+      "dest": "/tour-image-manager.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
     }
   ],
   "headers": [
